[package]
name = "save_your_money"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
